base/src/test/resources/failure/tyck/issues/issue697.aya.txt
In file $FILE:29:61 ->

  27 |   => path (hfill2d p q r right)
  28 | 
  29 | def sym {A : Type} {a b : A} (p : a = b) : b = a => hcomp2d (idp a) idp p
                                                                    ^---^

Error: Unable to apply the expression
         idp a
       because the type of what you applied is not a Pi type, but instead:
         (=) {A} a a
         (Normalized: Path (λ i ⇒ A) a a)

1 error(s), 0 warning(s).
What are you doing?
